src/objects/Bad_Address_Audit__c.object
<CustomObject>
    <description>Tracks marked addresses from Bad Address</description>
    <fields>
        <fullName>Address_Type__c</fullName>
        <label>Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mailing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Journal</fullName>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Custom_Contact_Audits</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Known_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Known Address</label>
        <referenceTo>OrderApi__Known_Address__c</referenceTo>
        <relationshipName>Bad_Address_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Reason__c</fullName>
        <description>Reason mail was returned to sender</description>
        <label>Other Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Sender_Reason__c</fullName>
        <label>Return to Sender Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Address Unknown</fullName>
                </value>
                <value>
                    <fullName>Attempted Not Known (or Unknown)</fullName>
                </value>
                <value>
                    <fullName>Insufficient Address</fullName>
                </value>
                <value>
                    <fullName>Moved Left No Address</fullName>
                </value>
                <value>
                    <fullName>No Longer At Address</fullName>
                </value>
                <value>
                    <fullName>No Mail Receptacle</fullName>
                </value>
                <value>
                    <fullName>No Receptacle</fullName>
                </value>
                <value>
                    <fullName>No Such Number</fullName>
                </value>
                <value>
                    <fullName>No Such Street</fullName>
                </value>
                <value>
                    <fullName>Not At This Address</fullName>
                </value>
                <value>
                    <fullName>Not Deliverable as Addressed</fullName>
                </value>
                <value>
                    <fullName>Not In Directory Unable To Forward</fullName>
                </value>
                <value>
                    <fullName>Not Known</fullName>
                </value>
                <value>
                    <fullName>Refused</fullName>
                </value>
                <value>
                    <fullName>Return To Sender</fullName>
                </value>
                <value>
                    <fullName>Unable To Forward</fullName>
                </value>
                <value>
                    <fullName>Unclaimed</fullName>
                </value>
                <value>
                    <fullName>Undeliverable</fullName>
                </value>
                <value>
                    <fullName>Undeliverable as Addressed</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Unusable</fullName>
                </value>
                <value>
                    <fullName>Vacant</fullName>
                </value>
                <value>
                    <fullName>Other (please enter into Other Return)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Returned Address Audit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Return_Sender_Reason__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CCA-{0000}</displayFormat>
        <label>Audit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Returned Address Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>